--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "templates-plugin-typescript",
-  "description": "Polywrap Plugin Typescript Template",
+  "name": "@namestys/snapshot-wrap-plugin",
+  "description": "Polywrap Snapshot Plugin",
   "private": true,
+  "author": "Nestor Amesty <nestor@polywrap.io>",
   "version": "0.12.0",
   "main": "build/index.js",
   "scripts": {
@@ -14,7 +15,6 @@
     "@polywrap/core-js": "~0.12.0",
     "@polywrap/plugin-js": "~0.12.0",
     "@snapshot-labs/snapshot.js": "^0.5.8",
-    "dayjs": "^1.11.9",
     "ethers": "5.7.2",
     "graphql-request": "^6.1.0"
   },
